--- a/src/main/java/com/mycompany/proyecto_inventario/MainFrame.form
+++ b/src/main/java/com/mycompany/proyecto_inventario/MainFrame.form
@@ -1156,7 +1156,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="regresar2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="button_refresh1" min="-2" max="-2" attributes="0"/>
+                      <Component id="button_refresh_privilegios" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jScrollPane3" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -1172,7 +1172,7 @@
                           <Component id="regresar2" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="jScrollPane3" alignment="1" min="-2" pref="133" max="-2" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="button_refresh1" min="-2" max="-2" attributes="0"/>
+                              <Component id="button_refresh_privilegios" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -1242,12 +1242,12 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JButton" name="button_refresh1">
+            <Component class="javax.swing.JButton" name="button_refresh_privilegios">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Refresh"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refresh1MouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refresh_privilegiosMouseClicked"/>
               </Events>
             </Component>
           </SubComponents>
@@ -1296,7 +1296,7 @@
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
-                      <Component id="button_refresh" min="-2" max="-2" attributes="0"/>
+                      <Component id="button_refresh_roles" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
@@ -1324,7 +1324,7 @@
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="187" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="button_refresh" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="button_refresh_roles" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="regresar3" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -1411,12 +1411,12 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JButton" name="button_refresh">
+            <Component class="javax.swing.JButton" name="button_refresh_roles">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Refresh"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refreshMouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refresh_rolesMouseClicked"/>
               </Events>
             </Component>
             <Container class="javax.swing.JPanel" name="jPanel2">
@@ -2049,7 +2049,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="regresar7" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="button_refresh6" min="-2" max="-2" attributes="0"/>
+                      <Component id="button_refresh_proveedores" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jScrollPane7" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -2065,7 +2065,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="regresar7" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="jScrollPane7" alignment="1" min="-2" pref="133" max="-2" attributes="0"/>
-                          <Component id="button_refresh6" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="button_refresh_proveedores" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -2097,12 +2097,12 @@
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="regresar7MouseClicked"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="button_refresh6">
+            <Component class="javax.swing.JButton" name="button_refresh_proveedores">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Refresh"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refresh6MouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refresh_proveedoresMouseClicked"/>
               </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane7">
@@ -2115,19 +2115,64 @@
                 <Component class="javax.swing.JTable" name="table_proveedores">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="2" rowCount="0">
-                        <Column editable="true" title="id_rol" type="java.lang.Object"/>
+                      <Table columnCount="9" rowCount="0">
+                        <Column editable="true" title="codigo_proveedor" type="java.lang.Object"/>
                         <Column editable="true" title="nombre" type="java.lang.Object"/>
+                        <Column editable="true" title="nombre_contacto_principal" type="java.lang.Object"/>
+                        <Column editable="true" title="estado" type="java.lang.Object"/>
+                        <Column editable="true" title="direccion" type="java.lang.Object"/>
+                        <Column editable="true" title="fecha_creacion" type="java.lang.Object"/>
+                        <Column editable="true" title="fecha_ultima_actualizacion" type="java.lang.Object"/>
+                        <Column editable="true" title="usuario_creo" type="java.lang.Object"/>
+                        <Column editable="true" title="usuario_actualizo" type="java.lang.Object"/>
                       </Table>
+                    </Property>
+                    <Property name="autoResizeMode" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="0" type="code"/>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="150" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="180" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="180" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="100" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="150" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -2168,7 +2213,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="regresar8" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="button_refresh7" min="-2" max="-2" attributes="0"/>
+                      <Component id="button_refresh_clientes" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jScrollPane8" min="-2" pref="414" max="-2" attributes="0"/>
                   </Group>
@@ -2183,7 +2228,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="1" groupAlignment="3" attributes="0">
                               <Component id="regresar8" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="button_refresh7" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="button_refresh_clientes" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane8" alignment="1" min="-2" pref="133" max="-2" attributes="0"/>
                       </Group>
@@ -2217,12 +2262,12 @@
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="regresar8MouseClicked"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="button_refresh7">
+            <Component class="javax.swing.JButton" name="button_refresh_clientes">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Refresh"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refresh7MouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="button_refresh_clientesMouseClicked"/>
               </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane8">
